metallb/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: python-simple-http-server
 namespace: testmlb
spec:
 replicas: 2
 selector:
    matchLabels:
      app: simple-http-server
 template:
    metadata:
      labels:
        app: simple-http-server
    spec:
      containers:
      - name: http-server
        imagePullPolicy: Always
        image: sergedevops/dockerrepo:simple-http-server
        ports:
        - containerPort: 8000
